# Mitre-Core_v3

./: .gitignore  BENCHMARK.md  CLAUDE.md  Dockerfile  IMPROVEMENT_LOG.md  LICENSE  MEMORY.md  MITRE-design.md  Makefile  README.md  UPGRADE.md  VERIFY.TXT  VERSION  conftest.py  context.md  docker-compose.yml  env.example  mitre_core_run.py  pyproject.toml  requirements.txt  stakeholder_dashboard.py  tactic_map.json
baselines/: __init__.py  simple_clustering.py
benchmark/: clustering_sweep.py  clustering_sweep_full_engine.py  clustering_sweep_standalone.py  datasets.yaml  datasets_cicids2017_only.yaml  datasets_exp2.6b.yaml  datasets_real.yaml  datasets_ton_iot_only.yaml  methods.yaml  run_benchmark.py
checkpoints/: model_card.md
core/: __init__.py  analyst_feedback_processor.py  correlation_indexer.py  output.py  postprocessing.py  preprocessing.py  rl_anomaly_detector.py  rl_attack_predictor.py
docs/: IEEE_TIFS_Round3_Review_MITRE_CORE.docx  MITRE_CORE_Upgrade_Plan.docx  TABLE_VIII_PRODUCTION_RESULTS.md  TABLE_VIII_PRODUCTION_RESULTS_v2.md  architecture.md  benchmark_protocol.md  competitive_analysis.md  repo_layout.md  reproducibility.md  structural-ceiling-research-plan.md
experiments/: analyze_bridge_edge_ablation.py  analyze_entity_collapse.py  analyze_optc_bridge_edges.py  e2e_clean_verify.py  evaluate_unsw.py  hgnn_scaling_results.csv  run_all_experiments.py  run_baseline_clustering.py  run_calibration_tsne.py  run_gate_tuning.py  run_multi_dataset_experiments.py  run_multiseed_headline_table.py  run_real_data_experiments.py  verify_review_claims.py  (+1 more)
(+1099 files in other folders)
